--- a/index.html
+++ b/index.html
@@ -1,84 +1,169 @@
 <!DOCTYPE html>
+
 <html>
-
-<head>
-    <title>Chocolate Pizza Recipe</title </head>
+  <head>
+    <title>Chocolate Pizza</title>
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="style.css">
-</html>
+    <link href="https://fonts.googleapis.com/css?family=Oswald:200,400|Delius|Roboto+Condensed|Yellowtail" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:300|EB+Garamond" rel="stylesheet">
+  </head>
 
-<body>
+  <body>
     <header>
-        <div class="Left Header">
-            <h1>Delicous</h1>
-            <h2>THE BEST FOOD BLOG EVER</h2>
-        </div>
+      <div>
+        <img class="logo" src="images/logo.png">
 
+        <section>
+          <h1>Delicious</h1>
+          <p>THE BEST FOOD BLOG ON THE WEB.</p>
+        </section>
+      </div>
 
-        <div class="rightheader">
-            <ul class="iconrow">
-                <li class="iconlist"><img src="images/fb-icon.png"></li>
-                <li class="iconlist"><img src="images/twit-icon.png"></li>
-                <li class="iconlist"><img src="images/gp-icon.png"></li>
-                <li class="iconlist"><img src="images/insta-icon.png"></li>
-                <li class="iconlist"><img src="images/flic-icon.png"></li>
-                <li class="iconlist"><img src="images/pint-icon.png"></li>
-                <li class="iconlist"><img src="images/rss-icon.png"></li>
-                <li class="iconlist"><img src="images/mail-icon.png"></li>
-        </div>
-
+        <nav>
+          <ul>
+            <li><img src="images/mail-icon.png"></li>
+            <li><img src="images/rss-icon.png"></li>
+            <li><img src="images/pint-icon.png"></li>
+            <li><img src="images/flic-icon.png"></li>
+            <li><img src="images/insta-icon.png"></li>
+            <li><img src="images/gp-icon.png"></li>
+            <li><img src="images/twit-icon.png"></li>
+            <li><img src="images/fb-icon.png"></li>
+          </ul>
+        </nav>
     </header>
 
-    <div class="All Content">
-        <section>
-            <h1>Chocolate Pizza</h1>
-            <h3>Posted on 15 Dec 2013 / Desserts
+    <div class="clearfix"></div>
 
-                <img src="images/print-icon.png">
-        </section>
+    <div class="lg-style-bar"><img src="images/main-style-bar-joh.png"></div>
 
-        <section class="Recipe Content">
-            <img src="images/choco-pizza.png">
-            <p class="Instructions 1">For the fig-swirl: Melt butter over medium heat in a saucepan. Add brown sugar and stir to dissolve. Halve all<br> of the figs and toss in the saucepan with water and lemon juice. Cook over medium heat, stirring frequently, until<br> you have a chunky-jammy mixture. Add salt with one or two stirs, set aside and let cool completely.</p>
-            <p class="Instructions 2">Ice cream: In a small pot over medium heat, combine milk, granulated sugar until sugar is completely<br> dissolved and the milk is just barely lukewarm. Whisk in the egg yolks. Set mixture in the fridge and wait until the<br> fig mixture is cooled.</p>
-            <p class="Instructions 3">
-                <p>Using and ice cream machine, pour liquids into the frozen basin and process according to manufacturer<br> instructions, i.e., let spin and thicken for 20 minutes before adding mascarpone, fig jam mixture, and the nuts.<br> Continue to process for +/- 10 minutes. Pour semi-frozen mixture into a pyrex dish or glass tupperware. Freeze for<br> at least two hours before serving.</p>
-        </section>
+    <main>
+      <h2>Chocolate Pizza</h2>
 
-        <section id="procedure">
-            <ul id="left recipe">
-                <li>1 1/2 cups milk</li>
-                <li>1/2 cup mascarpone</li>
-                <li>1/2 tsp pink salt</li>
-                <li>1lb Black Mission Figs</li>
-                <li>1/2 cup brown sugar</li>
-                <li>2-4 tbsp water</li>
-            </ul>
-    </div>
-    <div id="procedure">
-        <ul id="left recipe">
-            <li>1 1/2 heavy cream</li>
-            <li>1/3 granulated sugar</li>
-            <li>2 eggs yolks</li>
-            <li>1 lemon, juiced</li>
-            <li>2 tbsp butter</li>
-            <li>1 cup honey roasted pecans, roughly chopped</li>
-        </ul>
-    </div>
-    </section>
-    <section class="biosection">
+      <div id="main-sub-heading">
+        <span class="left">POSTED ON 15 DEC 2013 /DESSERTS</span>
+        <span class="right"><a href="#"><img src="img/print-icon.png">PRINT</a></span>
+      </div>
+
+      <div class="clearfix"></div>
+
+      <img id="banner-img" src="images/choco-pizza.png">
+
+      <p id="directions">
+        For the fig-swirl: Melt butter over medium heat in a saucepan. Add brown sugar and stir to dissolve. Halve all of the figs and toss in the saucepan with water and lemon juice. Cook over medium heat, stirring frequently, until you have a chunky-jammy mixture. Add salt with one or two stirs, set aside and let cool completely.
+      </p>
+
+      <p id="directions">
+        Ice cream: In a small pot over medium heat, combine milk, granulated sugar until sugar is completely dissolved and the milk is just barely lukewarm. Whisk in the egg yolks. Set mixture in the fridge and wait until the fig mixture is cooled.
+      </p>
+
+      <p id="directions">
+        Using and ice cream machine, pour liquids into the frozen basin and process according to manufacturer instructions, i.e., let spin and thicken for 20 minutes before adding mascarpone, fig jam mixture, and the nuts. Continue to process for +/- 10 minutes. Pour semi-frozen mixture into a pyrex dish or glass tupperware. Freeze for at least two hours before serving.
+      </p>
+
+      <section id="ingredients-main">
+        <img class="ingredients-bg-pic" src="images/list-bg.png">
+
+        <div id="ingredients-checklist">
+          <div class="left-checklist">
+            <fieldset>
+              <label for="ingredients">1 1/2 cups milk</label>
+              <input type="checkbox" name="ingredients" value="ingredient">
+            </fieldset>
+
+            <fieldset>
+              <label for="ingredients">1/2 cup mascarpone</label>
+              <input type="checkbox" name="ingredients" value="ingredient">
+            </fieldset>
+
+            <fieldset>
+              <label for="ingredients">1/2 tsp pink salt</label>
+              <input type="checkbox" name="ingredients" value="ingredient">
+            </fieldset>
+
+            <fieldset>
+              <label for="ingredients">1 lb Black Mission Figs</label>
+              <input type="checkbox" name="ingredients" value="ingredient">
+            </fieldset>
+
+            <fieldset>
+              <label for="ingredients">1/2 cup brown sugar</label>
+              <input type="checkbox" name="ingredients" value="ingredient">
+            </fieldset>
+
+            <fieldset>
+              <label for="ingredients">2-4 tbsp water</label>
+              <input type="checkbox" name="ingredients" value="ingredient">
+            </fieldset>
+          </div>
+
+          <div class="right-checklist">
+            <fieldset>
+              <label for="ingredients">1 1/2 cups heavy cream</label>
+              <input type="checkbox" name="ingredients" value="ingredient">
+            </fieldset>
+
+            <fieldset>
+              <label for="ingredients">1/3 granulated sugar</label>
+              <input type="checkbox" name="ingredients" value="ingredient">
+            </fieldset>
+
+            <fieldset>
+              <label for="ingredients">2 egg yolks</label>
+              <input type="checkbox" name="ingredients" value="ingredient">
+            </fieldset>
+
+            <fieldset>
+              <label for="ingredients">1 lemon, juiced</label>
+              <input type="checkbox" name="ingredients" value="ingredient">
+            </fieldset>
+
+            <fieldset>
+              <label for="ingredients">2 tbsp butter</label>
+              <input type="checkbox" name="ingredients" value="ingredient">
+            </fieldset>
+
+            <fieldset>
+              <label for="ingredients">1 cup honey roasted pecans, roughly chopped</label>
+              <input type="checkbox" name="ingredients" value="ingredient">
+            </fieldset>
+          </div>
+        </div>
+      </section>
+
+      <div class="clearfix"></div>
+
+      <div class="lg-style-bar"><img src="images/main-style-bar-joh.png"></div>
+
+      <div class="profile">
         <img src="images/van-pic.png">
-        <h3>Vanessa Stevenson</h3>
-        <p>Food enthusiast, photography fan. Add a pinch of raw foodism and thats<br> pretty much who I am.</p>
-        <button class="share">SHARE RECIPE</button>
-    </section>
 
-    <footer>
-        <img id="footerimg" src="images/small-logo.png">
-        <p class="published">Delicious © 2013 · All Rights Reserved.</p>
-        <p class="published">Proudly published with Ghost.</p>
-    </footer>
-    </div>
-</body>
+        <div class="bio">
+          <h3>Vanessa Stevenson</h3>
+          <span>Food enthusiast, photography fan. Add a pinch of raw foodism and that's pretty much who I am.</span>
+        </div>
 
+        <div class="bio-btn">
+          <button>SHARE RECIPE</button>
+        </div>
+      </div>
+
+      <footer>
+        <div class="sm-style-bar left"></div>
+        <img src="images/small-logo.png">
+        <div class="sm-style-bar right"></div>
+
+        <div class="clearfix"></div>
+
+        <section>
+          <p>Delicious &copy; 2013 &middot; All Rights Reserved</p>
+          <p>Proudly published with Ghost.</p>
+        </section>
+      </footer>
+    </main>
+
+
+    <script src="app.js"></script>
+  </body>
 </html>
